[package]
name = "aml-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for AML parser and executor"

[lib]
name = "aml"
crate-type = ["cdylib"]

[dependencies]
aml-core = { path = "../aml-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
