[package]
name = "sml-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for SML parser and executor"

[lib]
name = "sml"
crate-type = ["cdylib"]

[dependencies]
sml-core = { path = "../sml-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
